--- a/.github/ISSUE_TEMPLATE/question.yaml
+++ b/.github/ISSUE_TEMPLATE/question.yaml
@@ -27,7 +27,7 @@ body:
   - type: dropdown
     id: version
     attributes:
-      label: 您在运行那个版本？
+      label: 您在运行哪个版本？
       description: 告诉我，您的运行版本从而获取代码告诉您答案。
       options:
         - v1.0.0
